--- a/style.css
+++ b/style.css
@@ -10,43 +10,43 @@
 1: Variables & Common styling
 ---------------------------------------------------*/
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    background-image: linear-gradient(#FEB4A9, #F7A29B, #F79D94, #F58D80, #EB847D);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    margin: 0;
+	background-image: linear-gradient(#FEB4A9, #F7A29B, #F79D94, #F58D80, #EB847D);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	margin: 0;
 }
 
 h1 {
-    color: #FEFEFE;
-    letter-spacing: 0.1rem;
-    font-family: Arial;
+	color: #FEFEFE;
+	letter-spacing: 0.1rem;
+	font-family: Arial;
 }
 
 p {
-    font-family: Arial;
-    color: var(--color-tekst);
+	font-family: Arial;
+	color: var(--color-tekst);
 }
 
 /*Variables*/
 :root {
-    --color-knap: #FEFEFE;
-    --color-input: #FEFEFE;
-    --color-tekst: #3F3140;
-    --color-baggrund-title: #F2968F;
-    --color-header-nav: rgba(106, 89, 107, 0.76);
-    --color-menu: linear-gradient(#6A596B, #352D36);
-    --color-menu-accent: #3F3140;
-    font-family: Arial;
+	--color-knap: #FEFEFE;
+	--color-input: #FEFEFE;
+	--color-tekst: #3F3140;
+	--color-baggrund-title: #F2968F;
+	--color-header-nav: rgba(106, 89, 107, 0.76);
+	--color-menu: linear-gradient(#6A596B, #352D36);
+	--color-menu-accent: #3F3140;
+	font-family: Arial;
 
 }
 
 /*Common styling classes*/
 .rounded {
-    border-radius: 5px;
+	border-radius: 5px;
 }
 
 /*---------------------------------------------------
@@ -180,147 +180,147 @@ td {
 
 
 #chat_afsender {
-    position: relative;
-    display: flex;
-    padding-top: 0.5rem;
-    flex-basis: 400px;
-    flex-wrap: wrap;
+	position: relative;
+	display: flex;
+	padding-top: 0.5rem;
+	flex-basis: 400px;
+	flex-wrap: wrap;
 
 }
 
 #header_chat {
-    flex-wrap: nowrap;
+	flex-wrap: nowrap;
 }
 
 
 #chat_afsender img {
-    width: 3rem;
-    margin-left: 10rem;
-    padding-top: 0.5rem;
+	width: 3rem;
+	margin-left: 10rem;
+	padding-top: 0.5rem;
 }
 
 #header_chat p {
-    font-size: 1.5rem;
-    margin: auto 0;
-    padding-top: 0.5rem;
-    padding-left: 6.5rem;
+	font-size: 1.5rem;
+	margin: auto 0;
+	padding-top: 0.5rem;
+	padding-left: 6.5rem;
 }
 
 .besked1 {
-    display: flex;
+	display: flex;
 
 }
 
 #tekstboxikon1 p {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: var(--color-knap);
-    width: 3rem;
-    height: 3rem;
-    border-radius: 5rem;
-    padding: 1rem;
-    margin-left: 0.2rem;
-    font-weight: bold;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: var(--color-knap);
+	width: 3rem;
+	height: 3rem;
+	border-radius: 5rem;
+	padding: 1rem;
+	margin-left: 0.2rem;
+	font-weight: bold;
 
 }
 
 #tekstbox1 p {
-    font-size: 1rem;
-    background-color: white;
-    padding: 1.2rem;
-    margin-left: 0.5rem;
-    margin-right: 0.3rem;
-    border-radius: 0.7rem;
+	font-size: 1rem;
+	background-color: white;
+	padding: 1.2rem;
+	margin-left: 0.5rem;
+	margin-right: 0.3rem;
+	border-radius: 0.7rem;
 
 }
 
 .besked2 {
-    display: flex;
-    flex-direction: row-reverse;
+	display: flex;
+	flex-direction: row-reverse;
 
 }
 
 #tekstboxikon2 p {
-    background-color: #69596A;
-    color: white;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 5rem;
-    padding: 1rem;
-    margin-right: 0.2rem;
-    font-weight: bold;
+	background-color: #69596A;
+	color: white;
+	width: 3rem;
+	height: 3rem;
+	border-radius: 5rem;
+	padding: 1rem;
+	margin-right: 0.2rem;
+	font-weight: bold;
 
 }
 
 #tekstbox2 p {
-    font-size: 1rem;
-    background-color: #69596A;
-    color: white;
-    padding: 1rem;
-    margin-left: 3.5rem;
-    margin-right: 0.5rem;
-    border-radius: 0.7rem;
+	font-size: 1rem;
+	background-color: #69596A;
+	color: white;
+	padding: 1rem;
+	margin-left: 3.5rem;
+	margin-right: 0.5rem;
+	border-radius: 0.7rem;
 
 }
 
 .besked3 {
-    display: flex;
+	display: flex;
 
 }
 
 #tekstboxikon3 p {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: var(--color-knap);
-    width: 3rem;
-    height: 3rem;
-    border-radius: 5rem;
-    padding: 1rem;
-    margin-left: 0.2rem;
-    font-weight: bold;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: var(--color-knap);
+	width: 3rem;
+	height: 3rem;
+	border-radius: 5rem;
+	padding: 1rem;
+	margin-left: 0.2rem;
+	font-weight: bold;
 
 }
 
 #tekstbox3 p {
-    font-size: 1rem;
-    background-color: white;
-    padding: 1rem;
-    padding-right: 0.5rem;
-    margin-left: 0.5rem;
-    border-radius: 0.7rem;
-    margin-right: 0.3rem;
+	font-size: 1rem;
+	background-color: white;
+	padding: 1rem;
+	padding-right: 0.5rem;
+	margin-left: 0.5rem;
+	border-radius: 0.7rem;
+	margin-right: 0.3rem;
 
 }
 
 #ny_besked {
-    height: 11rem;
+	height: 11rem;
 }
 
 #skriv_her {
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    height: 5rem;
+	background-color: white;
+	display: flex;
+	flex-direction: row;
+	height: 5rem;
 
 }
 
 #skriv_her img {
-    width: 2rem;
-    margin-left: 2rem;
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    margin-right: 0.3rem;
+	width: 2rem;
+	margin-left: 2rem;
+	margin-top: 1rem;
+	margin-bottom: 0.5rem;
+	margin-right: 0.3rem;
 }
 
 
 #skriv_her input[type=text] {
-    padding: 1rem;
-    outline: -webkit-focus-ring-color auto 0;
-    width: 15rem;
-    margin-left: 1rem;
-    margin-bottom: 0.2rem;
-    margin-top: 0.2rem;
-    border: 1px solid #69596A;
+	padding: 1rem;
+	outline: -webkit-focus-ring-color auto 0;
+	width: 15rem;
+	margin-left: 1rem;
+	margin-bottom: 0.2rem;
+	margin-top: 0.2rem;
+	border: 1px solid #69596A;
 }
 
 
@@ -329,3 +329,205 @@ td {
 
 /*Login page*/
 .loginpage {}
+
+
+/*---------------------------------------------------
+Materialer (Sofia)
+---------------------------------------------------*/
+
+#section_materialer h1 {
+	color: #FEFEFE;
+	letter-spacing: 0.1rem;
+	font-family: Arial;
+	font-size: 18px;
+	font-weight: 50;
+	text-align: center;
+}
+
+.header_materialer {
+	background-color: var(--color-baggrund-title);
+	color: #ffffff;
+	padding: 1px;
+	width: 100%;
+	margin: 0px;
+	text-align: center;
+	border: none;
+	outline: none;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion1 {
+	background-color: #ffffff;
+	color: var(--color-tekst);
+	font-family: arial;
+	font-weight: bold;
+	letter-spacing: 1px;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.4s;
+	margin-bottom: 1px;
+}
+
+.accordion2 {
+	background-color: #ffffff;
+	color: var(--color-tekst);
+	font-family: arial;
+	cursor: pointer;
+	padding: 9px;
+	padding-left: 18px;
+	width: 100%;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.4s;
+	font-size: 12px;
+}
+
+.accordion3 {
+	background-color: #ffffff;
+	color: var(--color-tekst);
+	font-family: arial;
+	cursor: pointer;
+	padding: 9px;
+	padding-left: 18px;
+	width: 100%;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.4s;
+	font-size: 12px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+
+.accordion1:hover,
+.accordion1.active {
+	background-color: #ffffff;
+	color: var(--color-tekst);
+}
+
+.accordion2:hover,
+.accordion2.active {
+	background-color: var(--color-tekst);
+	color: #ffffff;
+}
+
+.accordion3:hover,
+.accordion3.active {
+	background-color: #AC8388;
+	color: #ffffff;
+}
+
+
+
+/* Style the accordion panel. Note: hidden by default */
+.panel1 {
+	padding: 0px;
+	background-color: white;
+	display: none;
+	overflow: hidden;
+	margin-bottom: 1px;
+}
+
+.panel2 {
+	padding: 0px;
+	background-color: #FBD5D2;
+	display: none;
+	overflow: hidden;
+
+}
+
+.panel3 {
+	text-align: left;
+	background-color: #FBD5D2;
+	color: var(--color-tekst);
+	display: none;
+	overflow: hidden;
+	font-family: arial;
+	font-size: 12px;
+}
+
+ul {
+	list-style: none;
+	padding-left: 5em;
+	padding-top: 5 0em;
+}
+
+
+ul img {
+	width: 19px;
+	padding-right: 0.5em;
+}
+
+li {
+	padding: 0.5em;
+}
+
+.accordion3 img {
+	width: 20px;
+	position: relative;
+	top: 4px;
+	padding-right: 0.5em;
+}
+
+.accordion2 img {
+	width: 25px;
+	;
+	position: relative;
+	top: 1px;
+	padding-right: 0.5em;
+}
+
+
+/*Åbne & Lukke-ikoner*/
+
+
+.accordion:after {
+	content: '\02795';
+	/* Unicode character for "plus" sign (+) */
+	font-size: 5px;
+	float: right;
+	margin-left: 5px;
+}
+
+.accordion.active:after {
+	content: "\2796";
+	/* Unicode character for "minus" sign (-) */
+}
+
+.accordion2:after {
+	content: '\02795';
+	/* Unicode character for "plus" sign (+) */
+	font-size: 5px;
+	color: #777;
+	float: right;
+	padding-right: 20px;
+	padding-top: 5px;
+}
+
+.accordion2.active:after {
+	content: "\2796";
+	color: #ffffff;
+	/* Unicode character for "minus" sign (-) */
+}
+
+.accordion3:after {
+	content: '\02795';
+	/* Unicode character for "plus" sign (+) */
+	font-size: 5px;
+	color: #777;
+	float: right;
+	padding-right: 20px;
+	padding-top: 5px;
+}
+
+.accordion3.active:after {
+	content: "\2796";
+	/* Unicode character for "minus" sign (-) */
+}
+
+/*----------------------------------------------------------------------------------*/
